Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1375,7 +1375,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "for col in df.columns:\n",
+    "    df[col] = (df[col]-min(df[col]))/ (max(df[col]) - min(df[col]))\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
