Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,6 +371,7 @@
     }
    ],
    "source": [
+    "#min-max scaling \n",
     "for col in df.columns:\n",
     "    df[col] = (df[col]-min(df[col]))/ (max(df[col]) - min(df[col]))\n",
     "df.head()"
