Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,7 +371,7 @@
     }
    ],
    "source": [
-    "#min-max scaling \n",
+    "#min-max scaling data\n",
     "for col in df.columns:\n",
     "    df[col] = (df[col]-min(df[col]))/ (max(df[col]) - min(df[col]))\n",
     "df.head()"
@@ -391,7 +391,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "x-"
    ]
   },
   {
