--- a/index.ipynb
+++ b/index.ipynb
@@ -392,7 +392,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "x-"
+    "X_train, X_test, y_train, y_test = train_test_split()"
    ]
   },
   {
