--- a/index.ipynb
+++ b/index.ipynb
@@ -387,12 +387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "X_train, X_test, y_train, y_test = train_test_split()"
+    "X_train, X_test, y_train, y_test = train_test_split(X,y)"
    ]
   },
   {
