Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,12 +405,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "logreg = LogisticRegression(fit_intercept = False, C = 1e12) #Starter code\n",
-    "#Your code here"
+    "#Your code here\n",
+    "logreg."
    ]
   },
   {
