Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -411,7 +411,7 @@
    "source": [
     "logreg = LogisticRegression(fit_intercept = False, C = 1e12) #Starter code\n",
     "#Your code here\n",
-    "logreg."
+    "logreg.fit(X_train, y_train)"
    ]
   },
   {
