Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "logreg.predict(X_train)"
    ]
   },
   {
