--- a/index.ipynb
+++ b/index.ipynb
@@ -465,11 +465,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0    193\n",
+      "-1     24\n",
+      " 1     10\n",
+      "Name: target, dtype: int64\n",
+      " 0    0.850220\n",
+      "-1    0.105727\n",
+      " 1    0.044053\n",
+      "Name: target, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "residuals = y_train - y_hat_train\n",
+    "print(pd.Series(residuals).value_counts())\n",
+    "print(pd.Series(residuals).value_counts(normalize=True))"
    ]
   },
   {
