--- a/index.ipynb
+++ b/index.ipynb
@@ -503,7 +503,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "residuals = y_test - y_hat_test\n",
+    "print(pd.Series(residuals).value_counts())\n",
+    "print(pd.Series(residuals).value_counts(normalize=True))"
    ]
   },
   {
