Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -499,9 +499,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0    64\n",
+      "-1    10\n",
+      " 1     2\n",
+      "Name: target, dtype: int64\n",
+      " 0    0.842105\n",
+      "-1    0.131579\n",
+      " 1    0.026316\n",
+      "Name: target, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
     "residuals = y_test - y_hat_test\n",
